# supreme-octo-eureka

./: .gitignore  README.md  pyproject.toml
src/: download_holidays_azure.py  holidays.py  python-holidays.py
